<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/add_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/one_more_hour"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/stop"/>

</LinearLayout>