<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/schedule_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/plan"/>

    <View
        android:id="@+id/line"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/schedule_title"
        android:background="@color/bt_color"
        android:layout_width="fill_parent" />

    <RelativeLayout
        android:id="@+id/timewithdel"
        android:layout_below="@id/line"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/times"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/from" />

            <TextView
                android:id="@+id/fromTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/from"
                android:layout_toEndOf="@id/from"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_alignBaseline="@id/from"
                android:text="@string/from_time"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/to"
                android:layout_marginTop="30dp"
                android:layout_below="@id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_alignEnd="@id/from"
                android:layout_alignRight="@id/from"
                android:text="@string/to" />

            <TextView
                android:id="@+id/toTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/to"
                android:layout_toEndOf="@id/to"
                android:layout_alignBaseline="@id/to"
                android:text="@string/to_time"
                android:textColor="@android:color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/times"
            android:layout_toEndOf="@id/times"
            android:paddingLeft="70dp"
            android:paddingStart="70dp"
            android:layout_alignBaseline="@id/times"
            android:src="@drawable/lajitong1"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weeks"
        android:layout_marginTop="40dp"
        android:layout_below="@id/timewithdel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/time_select_size" />

        <TextView
            android:id="@+id/Tu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textSize="@dimen/time_select_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textSize="@dimen/time_select_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/Th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textSize="@dimen/time_select_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textSize="@dimen/time_select_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/Sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textSize="@dimen/time_select_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/Su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textSize="@dimen/time_select_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:id="@+id/button_line"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/weeks"
        android:background="@android:color/darker_gray"
        android:layout_width="fill_parent" />

    <LinearLayout
        android:layout_below="@id/button_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/complete" />
    </LinearLayout>
</RelativeLayout>
